<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_main_background">
    <com.hjq.bar.TitleBar
        android:id="@+id/tb_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/message_text" />

    <LinearLayout
        android:id="@+id/ll_system_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_30"
        android:orientation="horizontal"
        android:background="@color/app_main_default">
        <ImageView
            android:layout_width="@dimen/space_110"
            android:layout_height="@dimen/space_110"
            android:src="@mipmap/service_message"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_110"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/space_30">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_message"
                android:layout_weight="1"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_size_36px"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="关于平台系统发出的信息通知"
                android:textColor="@color/text_main_color"
                android:textSize="@dimen/font_size_28px"/>

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/v_horizontal_line"/>

    <LinearLayout
        android:id="@+id/ll_account_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_30"
        android:orientation="horizontal"
        android:background="@color/app_main_default">
        <ImageView
            android:layout_width="@dimen/space_110"
            android:layout_height="@dimen/space_110"
            android:src="@mipmap/account_message"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_110"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/space_30">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_message"
                android:layout_weight="1"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_size_36px"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="关于用户的信息通知"
                android:textColor="@color/text_main_color"
                android:textSize="@dimen/font_size_28px"/>

        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/v_horizontal_line"/>

    <LinearLayout
        android:id="@+id/ll_activities_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_30"
        android:orientation="horizontal"
        android:background="@color/app_main_default">
        <ImageView
            android:layout_width="@dimen/space_110"
            android:layout_height="@dimen/space_110"
            android:src="@mipmap/activities_message"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_110"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/space_30">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activities_message"
                android:layout_weight="1"
                android:textColor="@color/color_black"
                android:textSize="@dimen/font_size_36px"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="关于活动的信息通知"
                android:textColor="@color/text_main_color"
                android:textSize="@dimen/font_size_28px"/>

        </LinearLayout>
    </LinearLayout>

\

</LinearLayout>