<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.CouponFragment">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_my_coupon_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon_back="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/space_20"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_activities_market"
                android:layout_width="@dimen/space_200"
                android:layout_height="35dp"
                android:textSize="15dp"
                android:gravity="center"
                android:focusable="true"
                android:textColor="@color/app_main_default"
                android:text="商城"
                android:background="@drawable/shape_left_select_background"/>
            <TextView
                android:id="@+id/tv_activities_store"
                android:layout_width="@dimen/space_200"
                android:layout_height="35dp"
                android:textSize="15dp"
                android:gravity="center"
                android:focusable="true"
                android:textColor="@color/text_main_color"
                android:text="商户"
                android:background="@drawable/shape_right_background"/>
        </LinearLayout>

    </com.hjq.bar.TitleBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_main_default"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_my_coupon_not_used"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/coupon_not_used"
            android:gravity="center"
            android:textColor="@color/text_type_red"
            android:textSize="@dimen/font_size_30px"
            android:padding="@dimen/space_30"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/tv_my_coupon_used"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/coupon_used"
            android:gravity="center"
            android:textColor="@color/text_main_color"
            android:textSize="@dimen/font_size_30px"
            android:padding="@dimen/space_30"
            android:textStyle="bold"/>


        <TextView
            android:id="@+id/tv_is_expired"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/expired"
            android:textColor="@color/text_main_color"
            android:textSize="@dimen/font_size_30px"
            android:padding="@dimen/space_30"
            android:textStyle="bold"/>

    </LinearLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smartrefresh.layout.header.ClassicsHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srlAccentColor="@android:color/white"
            app:srlClassicsSpinnerStyle="FixedBehind"
            app:srlPrimaryColor="#444" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:overScrollMode="never"
            tools:listitem="@android:layout/simple_list_item_2" />
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>
