<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.MineFragment">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlDragRate="1"
        app:srlEnableLoadmore="true"
        app:srlEnablePureScrollMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_560">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_480"
                    android:background="@mipmap/mine_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/my_icon_img"
                        android:layout_width="@dimen/space_120"
                        android:layout_height="@dimen/space_120"
                        android:layout_marginLeft="@dimen/space_80"
                        android:src="@mipmap/bg_launcher"
                        android:layout_marginTop="@dimen/space_40"
                        app:civ_border_color="@android:color/white"
                        app:civ_border_width="@dimen/space_4" />

                    <LinearLayout
                        android:id="@+id/ll_user_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/space_30"
                        android:layout_marginRight="@dimen/space_80"
                        android:layout_marginTop="@dimen/space_40"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_mine_user_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="张宝宝"
                                android:textColor="@color/app_main_default"
                                android:textSize="@dimen/font_size_34px" />

                            <TextView
                                android:id="@+id/tv_mine_medal_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/space_20"
                                android:layout_weight="1"
                                android:text="银牌"
                                android:textColor="@color/app_main_default"
                                android:textSize="@dimen/font_size_18px" />

                            <TextView
                                android:id="@+id/tv_sign_in"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/shape_red_background"
                                android:text="签到"
                                android:textColor="@color/app_main_default"
                                android:textSize="@dimen/font_size_26px" />
                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/grown_bar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="@dimen/space_260"
                            android:layout_height="@dimen/space_16"
                            android:layout_marginTop="@dimen/space_8"
                            android:max="1000"
                            android:maxHeight="@dimen/space_18"
                            android:minHeight="@dimen/space_18"
                            android:progress="200"
                            android:progressDrawable="@drawable/progressbar_style"
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/tv_mine_grown_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_8"
                            android:text="200/1000"
                            android:textColor="@color/app_main_default"
                            android:textSize="@dimen/font_size_22px" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_go_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/space_30"
                        android:text="登录/注册"
                        android:textColor="@color/app_main_default"
                        android:textSize="@dimen/font_size_34px"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_180"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/space_40"
                    android:layout_marginRight="@dimen/space_40"
                    android:background="@drawable/shape_mine_vip_background"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/space_20">

                    <LinearLayout
                        android:id="@+id/linear_mine_coupon"
                        android:layout_width="@dimen/space_160"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_mine_coupon_num"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="0张"
                            android:textColor="@color/text_main_color"
                            android:textSize="@dimen/font_size_26px" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/space_16"
                            android:gravity="center"
                            android:text="我的积分"
                            android:textColor="@color/text_main_color"
                            android:textSize="14dp" />
                    </LinearLayout>

                    <include layout="@layout/v_vertical_line" />
                    <LinearLayout
                        android:id="@+id/ll_join_vip_center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="进入我的会员中心" />

                        <ImageView
                            android:layout_width="@dimen/space_200"
                            android:layout_height="match_parent"
                            android:src="@mipmap/vip_center" />
                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_mine_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/setting"
                    android:layout_marginRight="@dimen/space_30"
                    android:visibility="visible"
                    android:layout_marginTop="@dimen/space_60"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_160"
                android:background="@color/app_main_default"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/space_20"
                android:padding="@dimen/space_16">

                <LinearLayout
                    android:id="@+id/ll_mine_focus"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_mine_focus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0张"
                        android:textColor="@color/text_main_color"
                        android:textSize="@dimen/font_size_26px" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_16"
                        android:gravity="center"
                        android:text="@string/mine_focus_text"
                        android:textColor="@color/text_main_color"
                        android:textSize="@dimen/font_size_28px" />
                </LinearLayout>

                <include layout="@layout/v_vertical_line" />

                <LinearLayout
                    android:id="@+id/linear_mine_collection"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_mine_collection"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0分"
                        android:textColor="@color/text_main_color"
                        android:textSize="@dimen/font_size_26px" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_16"
                        android:gravity="center"
                        android:text="@string/mine_collection_text"
                        android:textColor="@color/text_main_color"
                        android:textSize="@dimen/font_size_28px" />

                </LinearLayout>

                <include layout="@layout/v_vertical_line" />

                <LinearLayout
                    android:id="@+id/ll_mine_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_mine_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0分"
                        android:textColor="@color/text_main_color"
                        android:textSize="@dimen/font_size_26px" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_16"
                        android:gravity="center"
                        android:text="@string/mine_sign_up_text"
                        android:textColor="@color/text_main_color"
                        android:textSize="@dimen/font_size_28px" />

                </LinearLayout>

                <include layout="@layout/v_vertical_line" />

                <LinearLayout
                    android:id="@+id/ll_mine_browse_record"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_mine_browse_record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="0分"
                        android:textColor="@color/text_main_color"
                        android:textSize="@dimen/font_size_26px" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_16"
                        android:gravity="center"
                        android:text="@string/mine_browse_record_text"
                        android:textColor="@color/text_main_color"
                        android:textSize="@dimen/font_size_28px" />

                </LinearLayout>

            </LinearLayout>

            <include layout="@layout/v_horizontal_line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_220"
                android:background="@color/app_main_default"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tv_mine_play_vip"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_200"
                    android:layout_weight="1"
                    android:padding="@dimen/space_30"
                    android:src="@mipmap/vip"/>
                <ImageView
                    android:id="@+id/tv_mine_customer_service"
                    android:layout_width="match_parent"
                    android:padding="@dimen/space_30"
                    android:layout_height="@dimen/space_200"
                    android:layout_weight="1"
                    android:src="@mipmap/customer_service"
                    />

            </LinearLayout>

        </LinearLayout>


    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>